show message with alert

--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="my.js"></script>
 </head>
 <body>
-<p id="content">Xin chao cac ban</p>
-<p class="">Hello Viet Nam</p>
-<input type="text" id="numberOne" value="">
-<input type="text" id="numberTwo" value="">
-<button onclick="clickMe()">Click</button>
-<script src="my.js"></script>
+<button onclick="showMessage()">Click me</button>
+
 </body>
 </html>
